networking/newvnet.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "virtualNetworkName": {
      "type": "string",
      "metadata": {
        "description": "VNet name"
      }
    },
    "vnetResourceGroup": {
      "type": "string"
    },
    "subnetName": {
      "type": "string"
    },
    "addressSpace": {
      "type": "string"
    },
    "addressSubnet": {
      "type": "string"
    },
    "workstationName": {
      "type": "string",
      "metadata": {
        "description": "Workstation name must be 3-char min, 8-char max, lowercase alphanumeric"
      }
    }
  },
  "variables": {
    "networkSecurityGroupName": "[concat(parameters('workstationName'),'-nsg')]",
    "networkSecurityGroupRules": [
      {
        "name": "RDP",
        "properties": {
          "priority": 300,
          "protocol": "TCP",
          "access": "Allow",
          "direction": "Inbound",
          "sourceAddressPrefix": "*",
          "sourcePortRange": "*",
          "destinationAddressPrefix": "*",
          "destinationPortRange": "3389"
        }
      },
      {
        "name": "PCoIPtcp",
        "properties": {
          "priority": 301,
          "protocol": "TCP",
          "access": "Allow",
          "direction": "Inbound",
          "sourceAddressPrefix": "*",
          "sourcePortRange": "*",
          "destinationAddressPrefix": "*",
          "destinationPortRange": "4172"
        }
      },
      {
        "name": "PCoIPudp",
        "properties": {
          "priority": 302,
          "protocol": "UDP",
          "access": "Allow",
          "direction": "Inbound",
          "sourceAddressPrefix": "*",
          "sourcePortRange": "*",
          "destinationAddressPrefix": "*",
          "destinationPortRange": "4172"
        }
      },
      {
        "name": "certauthhttp",
        "properties": {
          "priority": 303,
          "protocol": "TCP",
          "access": "Allow",
          "direction": "Inbound",
          "sourceAddressPrefix": "*",
          "sourcePortRange": "*",
          "destinationAddressPrefix": "*",
          "destinationPortRange": "80"
        }
      },
      {
        "name": "certauthhttps",
        "properties": {
          "priority": 304,
          "protocol": "TCP",
          "access": "Allow",
          "direction": "Inbound",
          "sourceAddressPrefix": "*",
          "sourcePortRange": "*",
          "destinationAddressPrefix": "*",
          "destinationPortRange": "443"
        }
      },
      {
        "name": "Teradici",
        "properties": {
          "priority": 305,
          "protocol": "TCP",
          "access": "Allow",
          "direction": "Inbound",
          "sourceAddressPrefix": "*",
          "sourcePortRange": "*",
          "destinationAddressPrefix": "*",
          "destinationPortRange": "60443"
        }
      }

    ]
  },
  "resources": [
    {
      "name": "[concat(variables('networkSecurityGroupName'))]",
      "type": "Microsoft.Network/networkSecurityGroups",
      "apiVersion": "2018-08-01",
      "location": "[resourceGroup().location]",
      "properties": {
        "securityRules": "[variables('networkSecurityGroupRules')]"
      },
      "tags": {}
    },
    {
      "apiVersion": "2016-03-30",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('virtualNetworkName')]",
      "location": "[resourceGroup().location]",
      "properties": {
        "addressSpace": {
          "addressPrefixes": [ "[parameters('addressSpace')]" ]
        },
        "subnets": [
          {
            "name": "[parameters('subnetName')]",
            "properties": {
              "addressPrefix": "[parameters('addressSubnet')]"
            }
          }
        ]
      }
    }
  ],
  "outputs": {
    "subnetRef": {
      "value": "[concat(resourceId('Microsoft.Network/virtualNetworks/', parameters('virtualNetworkName')), '/subnets/',parameters('subnetName'))]",
      "type": "string"
    },
    "virtualNetworkID": {
      "value": "",
      "type": "string"
    }
  }
}
